syntax = "proto3";

package com.github.im.common.connect.model.proto;
option java_package = "com.github.im.group.model.proto";
option java_outer_classname = "Chat";
//import "google/protobuf/any.proto";
import "Account.proto";

// chat 信息
message ChatMessage  {


  int64 msgId = 1 ;

//  int32 clientSeq = 4; // client sequence

  string content  = 3 ;
  //client-server
  int64 conversationId = 9 ;


  string conversationName = 10 ;

  AccountInfo fromAccountInfo = 2 ;
 // server-client 需要使用 用于指示推送到的客户端
  AccountInfo toAccountInfo = 8 ;

  sint32 clientTimeStamp = 7 ;

  sint32 serverTimeStamp = 12 ;

  MessageType type = 6 ; // 消息类型

  MessagesStatus messagesStatus = 11; // 消息状态

  int64 sequenceId = 5 ; // generateBy server


  enum MessagesStatus{

      REJECT = 0 ;

      OFFLINE = 1 ;

      SENTFAIL = 7 ;

      HISTORY = 10 ;

      READ = 3 ;

      UNREAD = 2 ;

      SENT = 5 ;

      UNSENT = 11 ;  // 用于客户端标识发送状态


  }


}


enum MessageType{

  TEXT = 0 ;

  MARKDOWN = 5;

  FILE = 1 ;

  STREAM = 2 ;

  VIDEO = 3 ;

  IMAGE = 6;


}