syntax = "proto3";

package com.github.im.common.connect.model.proto;
option java_package = "com.github.im.common.connect.model.proto";
option java_outer_classname = "Account";



message AccountInfo{

  string account = 1 ;

  string accountName = 2 ;

  int64 userId  = 3 ;

  string eMail = 4 ;

  PlatformType platformType = 5 ;

}


enum PlatformType{

  WEB = 0;

  ANDROID = 1;

  IOS = 2;

  WINDOWS = 3;

  MAC = 4;

  LINUX = 5;


}

enum AccountOperationType{

  SIGNIN = 0;

  LOGOUT = 1;


}